// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI runtime steps (v4) > AC-30: preserves OpenAPI generated bytes for javascript 1`] = `
{
  "appPackage/manifest.json": "{"bots":[{"commandLists":[{"scopes":["personal"],"commands":[{"title":"Get pets by id","description":"Get pets by id"}]}]}]}",
  "src/adaptiveCards/getPets.data.json": "{
  "pets": [
    {
      "name": "Milo"
    }
  ]
}",
  "src/adaptiveCards/getPets.json": "{
  "type": "AdaptiveCard",
  "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
  "version": "1.5",
  "body": [
    {
      "type": "Container",
      "$data": "\${pets}",
      "items": [
        {
          "type": "TextBlock",
          "text": "name: \${if(name, name, 'N/A')}",
          "wrap": true
        }
      ]
    }
  ]
}",
  "src/app/app.js": ".function(
      functionDefs.getPets.name,
      functionDefs.getPets.description,
      functionDefs.getPets.parameters,
      async (parameter) => {
        const result = await functionHandlers.getPetsHandler(parameter);
        if(result) {
          await send(result);
          return "result showed";
        } else {
          return "no result";
        }
      }
  );
//Replace with functions to be imported
",
  "src/app/functions.json": "{
  "getPets": {
    "name": "getPets",
    "description": "Get pets by id",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "object",
          "properties": {
            "petId": {
              "type": "string",
              "description": "Pet id"
            }
          },
          "required": [
            "petId"
          ]
        },
        "query": {
          "type": "object",
          "properties": {
            "includeDetails": {
              "type": "boolean",
              "description": ""
            }
          },
          "required": []
        },
        "body": {
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "description": "Pet kind"
            }
          },
          "required": [
            "kind"
          ],
          "description": "Filter body"
        }
      },
      "required": [
        "path",
        "body"
      ]
    }
  }
}",
  "src/app/handlers.js": "const getPetsHandler = async (
  parameters
) => {
  const client = await api.getClient();
  addAuthConfig(client);
  const apiPath = client.paths["/pets/{petId}"];
  if (apiPath && apiPath.get) {
    const result = await apiPath.get(parameters.path, parameters.body, {
      params: parameters.query,
    });
    if (!result || !result.data) {
      throw new Error("Get empty result from api call.");
    }
    const cardName = "getPets".replace(/[^a-zA-Z0-9]/g, "_");
    const cardTemplatePath = path.join(__dirname, '../adaptiveCards', cardName + '.json');
    if (await fs.exists(cardTemplatePath)){
      const card = generateAdaptiveCard(cardTemplatePath, result);
      return card;
    } else {
      return JSON.stringify(result.data);
    }
  } else {
    return "";
  }

};

module.exports = { getPetsHandler };
openapi.yaml",
  "src/app/instructions.txt": "The following is a conversation with an AI assistant.
The assistant can help to call APIs for the open api spec file. Pet store APIs
If the API doesn't require parameters, invoke it with default JSON object { "path": null, "body": null, "query": null }.

",
}
`;

exports[`OpenAPI runtime steps (v4) > AC-30: preserves OpenAPI generated bytes for python 1`] = `
{
  "appPackage/manifest.json": "{"bots":[{"commandLists":[{"scopes":["personal"],"commands":[{"title":"Get pets by id","description":"Get pets by id"}]}]}]}",
  "src/adaptiveCards/getPets.data.json": "{
  "pets": [
    {
      "name": "Milo"
    }
  ]
}",
  "src/adaptiveCards/getPets.json": "{
  "type": "AdaptiveCard",
  "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
  "version": "1.5",
  "body": [
    {
      "type": "Container",
      "$data": "\${pets}",
      "items": [
        {
          "type": "TextBlock",
          "text": "name: \${if(name, name, 'N/A')}",
          "wrap": true
        }
      ]
    }
  ]
}",
  "src/app.py": "prompt.with_function(
      Function(
            name=function_defs["getPets"]["name"],
            description=function_defs["getPets"]["description"],
            parameter_schema=function_defs["getPets"]["parameters"],
            handler=make_handler(getPets, ctx)
      )
    )
getPets
",
  "src/functions.json": "{
  "getPets": {
    "name": "getPets",
    "description": "Get pets by id",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "object",
          "properties": {
            "petId": {
              "type": "string",
              "description": "Pet id"
            }
          },
          "required": [
            "petId"
          ]
        },
        "query": {
          "type": "object",
          "properties": {
            "includeDetails": {
              "type": "boolean",
              "description": ""
            }
          },
          "required": []
        },
        "body": {
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "description": "Pet kind"
            }
          },
          "required": [
            "kind"
          ],
          "description": "Filter body"
        }
      },
      "required": [
        "path",
        "body"
      ]
    }
  }
}",
  "src/handlers.py": "async def getPets(
  parameters,
):
  path = getattr(parameters, "path", {})
  body = getattr(parameters, "body", None)
  query = getattr(parameters, "query", {}) or {}
  resp = client.getPets(**path, json=body, _headers={}, _params=query, _cookies={})

  if resp.status_code != 200:
    return resp.reason
  else:
    card_template_path = os.path.join(current_dir, 'adaptiveCards/getPets.json')
    if not os.path.exists(card_template_path):
      json_resoponse_str = resp.text
      return json_resoponse_str
    else:
      with open(card_template_path) as card_template_file:
        adaptive_card_template = card_template_file.read()

      renderer = AdaptiveCardRenderer(adaptive_card_template)

      json_resoponse_str = resp.text
      rendered_card_str = renderer.render(json_resoponse_str)
      rendered_card_json = json.loads(rendered_card_str)
      return AdaptiveCard.model_validate(rendered_card_json)
  
openapi.yaml",
  "src/instructions.txt": "The following is a conversation with an AI assistant.
The assistant can help to call APIs for the open api spec file. Pet store APIs
If the API doesn't require parameters, invoke it with default JSON object { "path": null, "body": null, "query": null }.

",
}
`;

exports[`OpenAPI runtime steps (v4) > AC-30: preserves OpenAPI generated bytes for typescript 1`] = `
{
  "appPackage/manifest.json": "{"bots":[{"commandLists":[{"scopes":["personal"],"commands":[{"title":"Get pets by id","description":"Get pets by id"}]}]}]}",
  "src/adaptiveCards/getPets.data.json": "{
  "pets": [
    {
      "name": "Milo"
    }
  ]
}",
  "src/adaptiveCards/getPets.json": "{
  "type": "AdaptiveCard",
  "$schema": "https://adaptivecards.io/schemas/adaptive-card.json",
  "version": "1.5",
  "body": [
    {
      "type": "Container",
      "$data": "\${pets}",
      "items": [
        {
          "type": "TextBlock",
          "text": "name: \${if(name, name, 'N/A')}",
          "wrap": true
        }
      ]
    }
  ]
}",
  "src/app/app.ts": ".function(
      functionDefs.getPets.name,
      functionDefs.getPets.description,
      functionDefs.getPets.parameters,
      async (parameter) => {
        const result = await functionHandlers.getPetsHandler(parameter);
        if(result) {
          await send(result);
          return "result showed";
        } else {
          return "no result";
        }
      }
  );
//Replace with functions to be imported
",
  "src/app/functions.json": "{
  "getPets": {
    "name": "getPets",
    "description": "Get pets by id",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "object",
          "properties": {
            "petId": {
              "type": "string",
              "description": "Pet id"
            }
          },
          "required": [
            "petId"
          ]
        },
        "query": {
          "type": "object",
          "properties": {
            "includeDetails": {
              "type": "boolean",
              "description": ""
            }
          },
          "required": []
        },
        "body": {
          "type": "object",
          "properties": {
            "kind": {
              "type": "string",
              "description": "Pet kind"
            }
          },
          "required": [
            "kind"
          ],
          "description": "Filter body"
        }
      },
      "required": [
        "path",
        "body"
      ]
    }
  }
}",
  "src/app/handlers.ts": "export const getPetsHandler = async (
  parameter: any
) => {
  const client = await api.getClient();
  addAuthConfig(client);
  const apiPath = client.paths["/pets/{petId}"];
  if (apiPath && apiPath.get) {
    const result = await apiPath.get(parameter.path, parameter.body, {
      params: parameter.query,
    });
    if (!result || !result.data) {
      throw new Error("Get empty result from api call.");
    }
    const cardName = "getPets".replace(/[^a-zA-Z0-9]/g, "_");
    const cardTemplatePath = path.join(__dirname, '../adaptiveCards', cardName + '.json');
    if (await fs.exists(cardTemplatePath)){
      const card = generateAdaptiveCard(cardTemplatePath, result);
      return card;
    } else {
      return JSON.stringify(result.data);
    }
  } else {
    return "";
  }
    
};
openapi.yaml",
  "src/app/instructions.txt": "The following is a conversation with an AI assistant.
The assistant can help to call APIs for the open api spec file. Pet store APIs
If the API doesn't require parameters, invoke it with default JSON object { "path": null, "body": null, "query": null }.

",
}
`;
